# fssp

./: CMakeLists.txt  LICENSE  README.md  fssp_ru_RU.ts  mainwindow.cpp  mainwindow.h
include/: customlabel.h  filereader.h  graphdialog.h  graphlabel.h  graphsdialog.h  mainwindow.h  signal.h  waveformsdialog.h
src/: basedeserializer.h  basemodel.cpp  basemodel.h  basespectrum.cpp  basespectrum.h  basewaveform.cpp  basewaveform.h  customlabel.cpp  filereader.cpp  graphdialog.cpp  graphdialog.h  graphlabel.cpp  graphsdialog.cpp  graphwaveform.cpp  graphwaveform.h  ideserializer.h  main.cpp  mainwindow.cpp  mainwindow.h  modelingwaveform.cpp  modelingwaveform.h  modelingwindow.cpp  modelingwindow.h  navigationdialog.cpp  navigationdialog.h  navigationlabel.cpp  navigationlabel.h  navigationwaveform.cpp  navigationwaveform.h  signal.cpp  signalbuilder.cpp  signalbuilder.h  signaldata.cpp  signaldata.h  signalmodels.cpp  signalmodels.h  signalpage.cpp  signalpage.h  spectrumwaveform.cpp  spectrumwaveform.h  (+13 more)
translation/: fssp_ru_RU.ts
translations/: fssp_ru_RU.ts
